@@ -1,5 +1,5 @@
 ##*****************************************************************************
-## $Id: Makefile.am,v 1.2 2005-06-18 00:14:39 achu Exp $
+## $Id: Makefile.am,v 1.3 2005-07-08 18:38:48 achu Exp $
 ##*****************************************************************************
 
 include_HEADERS        = cerebro.h
@@ -9,6 +9,6 @@ nobase_include_HEADERS = cerebro/cerebro_clusterlist_module.h \
 			 cerebro/cerebro_constants.h \
 			 cerebro/cerebro_error.h \
 			 cerebro/cerebro_metric_module.h \
-			 cerebro/cerebro_metric_protocol.h \
+			 cerebro/cerebro_metric_server_protocol.h \
 			 cerebro/cerebro_monitor_module.h \
 			 cerebro/cerebrod_heartbeat_protocol.h
