@@ -1,9 +1,9 @@
 /*****************************************************************************\
- *  $Id: cerebro_metric_protocol.h,v 1.5 2005-06-30 18:41:42 achu Exp $
+ *  $Id: cerebro_metric_server_protocol.h,v 1.1 2005-07-08 18:38:48 achu Exp $
 \*****************************************************************************/
 
-#ifndef _CEREBRO_METRIC_PROTOCOL_H
-#define _CEREBRO_METRIC_PROTOCOL_H
+#ifndef _CEREBRO_METRIC_SERVER_PROTOCOL_H
+#define _CEREBRO_METRIC_SERVER_PROTOCOL_H
 
 #include <sys/types.h>
 #include <cerebro/cerebro_constants.h>
@@ -31,24 +31,24 @@
  *   message.
  */
 
-#define CEREBRO_METRIC_PROTOCOL_VERSION               3
-#define CEREBRO_METRIC_PROTOCOL_SERVER_TIMEOUT_LEN    3
-#define CEREBRO_METRIC_PROTOCOL_CLIENT_TIMEOUT_LEN    5
-#define CEREBRO_METRIC_PROTOCOL_CONNECT_TIMEOUT_LEN   5
+#define CEREBRO_METRIC_SERVER_PROTOCOL_VERSION               3
+#define CEREBRO_METRIC_SERVER_PROTOCOL_SERVER_TIMEOUT_LEN    3
+#define CEREBRO_METRIC_SERVER_PROTOCOL_CLIENT_TIMEOUT_LEN    5
+#define CEREBRO_METRIC_SERVER_PROTOCOL_CONNECT_TIMEOUT_LEN   5
 
-#define CEREBRO_METRIC_PROTOCOL_ERR_SUCCESS           0
-#define CEREBRO_METRIC_PROTOCOL_ERR_VERSION_INVALID   1
-#define CEREBRO_METRIC_PROTOCOL_ERR_METRIC_UNKNOWN    2
-#define CEREBRO_METRIC_PROTOCOL_ERR_PARAMETER_INVALID 3
-#define CEREBRO_METRIC_PROTOCOL_ERR_PACKET_INVALID    4
-#define CEREBRO_METRIC_PROTOCOL_ERR_INTERNAL_ERROR    5
+#define CEREBRO_METRIC_SERVER_PROTOCOL_ERR_SUCCESS           0
+#define CEREBRO_METRIC_SERVER_PROTOCOL_ERR_VERSION_INVALID   1
+#define CEREBRO_METRIC_SERVER_PROTOCOL_ERR_METRIC_UNKNOWN    2
+#define CEREBRO_METRIC_SERVER_PROTOCOL_ERR_PARAMETER_INVALID 3
+#define CEREBRO_METRIC_SERVER_PROTOCOL_ERR_PACKET_INVALID    4
+#define CEREBRO_METRIC_SERVER_PROTOCOL_ERR_INTERNAL_ERROR    5
 
-#define CEREBRO_METRIC_PROTOCOL_IS_LAST_RESPONSE      1
-#define CEREBRO_METRIC_PROTOCOL_IS_NOT_LAST_RESPONSE  0
+#define CEREBRO_METRIC_SERVER_PROTOCOL_IS_LAST_RESPONSE      1
+#define CEREBRO_METRIC_SERVER_PROTOCOL_IS_NOT_LAST_RESPONSE  0
 
-#define CEREBRO_METRIC_SERVER_PORT                    8852
-#define CEREBRO_METRIC_TIMEOUT_LEN_DEFAULT            60
-#define CEREBRO_METRIC_FLAGS_DEFAULT                  0
+#define CEREBRO_METRIC_SERVER_PORT                           8852
+#define CEREBRO_METRIC_SERVER_TIMEOUT_LEN_DEFAULT            60
+#define CEREBRO_METRIC_SERVER_FLAGS_DEFAULT                  0
 
 /*
  * struct cerebro_metric_request
@@ -123,4 +123,4 @@ struct cerebro_metric_err_response
 #define CEREBRO_METRIC_ERR_RESPONSE_LEN  (sizeof(int32_t) \
                                           + sizeof(u_int32_t))
 
-#endif /* _CEREBRO_METRIC_PROTOCOL_H */
+#endif /* _CEREBRO_METRIC_SERVER_PROTOCOL_H */
